# centro_treinamento

./: README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/src/app/: main.py  routers.py
backend/src/app/atleta/: controller.py  models.py  schemas.py
backend/src/app/categorias/: controller.py  models.py  schemas.py
backend/src/app/centro_treinamento/: controller.py  models.py  schemas.py
backend/src/app/configs/: database.py  settings.py
backend/src/app/contrib/: dependencies.py
backend/src/app/contrib/repository/: models.py
backend/tests/: README.md  conftest.py  test.atletas.py  test_categorias.py  test_centros_treinamento.py  test_schemas.py
frontend/: dashboard.html
